# procreate-stuff

./: .gitignore  Dockerfile  process-plist.py  process_file.sh  process_files.sh  process_plist.py  run.sh  setup_python.sh
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
dockerfiles/: output_tar_exclude.txt  process_file.sh  process_files.sh  process_layer.py  process_plist.py  setup_python.sh
rust/: 0-0.lz4  Cargo.toml  build-rust.sh
rust/src/: document.rs  main.rs
website/: index.html  package-lock.json  package.json
website/public/image/: Document.json
website/src/: buffers.ts  controls.ts  draw.ts  image.ts  main.ts  render.ts  style.css  types.ts  util.ts  webgl-utils.ts
website/src/shaders/: fragment.glsl  layerFragment.glsl  layerVertex.glsl  vertex.glsl
