[package]
name = "procreate-decoder"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    # "libs/egui_dock",
    "libs/lz4_flex"
]

[dependencies]
image = "0.25.1"
lz4_flex = { path = "libs/lz4_flex" }
memmap2 = "0.9.4"
plist = "1.6.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
thiserror = "1.0.61"
zip = "2.1.3"
